# telegram-spotify-migrator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  spotify.py  telegram.py  utils.py
